--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.application.name=web-chat
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=mysecretpassword
+server.port=8080
+logging.level.root=INFO
